major frontend overhaul
